// Sample Protocol Buffer file for testing chunkers.

syntax = "proto3";

package sample.v1;

option go_package = "github.com/example/sample/proto/v1";

// User represents a user in the system.
message User {
  // Unique identifier for the user.
  string id = 1;

  // User's display name.
  string name = 2;

  // User's email address.
  string email = 3;

  // User's role in the system.
  Role role = 4;

  // When the user was created.
  int64 created_at = 5;
}

// Role defines user roles.
enum Role {
  ROLE_UNSPECIFIED = 0;
  ROLE_ADMIN = 1;
  ROLE_USER = 2;
  ROLE_GUEST = 3;
}

// CreateUserRequest is the request for creating a user.
message CreateUserRequest {
  string name = 1;
  string email = 2;
  Role role = 3;
}

// CreateUserResponse is the response for creating a user.
message CreateUserResponse {
  User user = 1;
}

// GetUserRequest is the request for getting a user.
message GetUserRequest {
  string id = 1;
}

// GetUserResponse is the response for getting a user.
message GetUserResponse {
  User user = 1;
}

// UserService provides user operations.
service UserService {
  // CreateUser creates a new user.
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);

  // GetUser retrieves a user by ID.
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}
